// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package agntcy.identity.core.v1alpha1;

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity/internal/pkg/generated/agntcy/identity/core/v1alpha1;identity_core_sdk_go";

// Describes the cause of the error with structured details.
message ErrorInfo {
  // The reason of the error, as defined by the ErrorReason enum.
  // This is a constant unique value that helps identify the cause of
  // the error.
  optional ErrorReason reason = 1;

  // The message describing the error in a human-readable way. This
  // field gives additional details about the error.
  optional string message = 2;
}


// Represents the reason for an error, providing a unique
// constant value for the error.
enum ErrorReason {
  // ERROR_REASON_UNSPECIFIED indicates that no specific error reason
  // has been specified.
  ERROR_REASON_UNSPECIFIED = 0;
  // The Agent ID is invalid or not found
  ERROR_REASON_INVALID_ID = 1;
  // The credential envelope type is invalid. For valid values refer to
  // the enum CredentialEnvelopeType.
  ERROR_REASON_INVALID_CREDENTIAL_ENVELOPE_TYPE = 2;
  // The credential envelope value format does not correspond to the format
  // specified in envelope_type.
  ERROR_REASON_INVALID_CREDENTIAL_ENVELOPE_VALUE_FORMAT = 3;
  // The credential content type is invalid. For valid values refer to
  // the enum CredentialContentType.
  ERROR_REASON_INVALID_CREDENTIAL_CONTENT_TYPE = 4;
  // The credential content format is not a valid JSON-LD.
  ERROR_REASON_INVALID_CREDENTIAL_CONTENT_FORMAT = 5;
  // The issuer contains one or more invalid fields.
  ERROR_REASON_INVALID_ISSUER = 6;
  // The Verifiable Credential is invalid, this can be related to either
  // invalid format or unable to verify the Data Integrity proof.
  ERROR_REASON_INVALID_VERIFIABLE_CREDENTIAL = 7;
  // Unable to find an VCs for an ID.
  ERROR_REASON_ID_VCS_NOT_FOUND = 8;
}

